svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: heroku-svc
  namespace: nodejs-sample
  labels:
    app: heroku
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8080
      targetPort: 5000
  type: LoadBalancer
  selector:
    app: heroku
